<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#415771"
        tools:context=".ui.email_validation.EmailValidationFragment">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailValidationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:text="@string/emailValidationText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="192dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/emailValidationEditText"
            android:hint="@string/emailHint"
            android:background="@drawable/edittext_register"
            android:textColor="@color/dusty_bluish_teal"
            android:padding="10dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextCitizenShipNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_16dp"/>
        <EditText
            android:id="@+id/editTextCitizenShipNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:inputType="number"
            android:maxLength="11"
            android:background="@drawable/edittext_register"
            android:textColor="@color/dusty_bluish_teal"
            android:padding="10dp"
            android:textSize="18sp"
            android:hint="TC Kimlik No"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailValidationText"
            android:layout_marginTop="16dp"

            />

        <Button
            android:id="@+id/validationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailValidationEditText"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/emailValidationButtonText"
            android:backgroundTint="@color/dusty_bluish_teal"
            android:textColor="@color/grayish_dusty_rose" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>