<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.atakandalkiran.bbnb.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeFragmentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="#00FFFFFF"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/thereIsNoCardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there_is_no_card_text"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_8dp"/>

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImage" />

        <TextView
            android:id="@+id/creditCardsHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_8dp"
            android:text="@string/home_header"
            android:textColor="@color/white"
            style="@style/TextAppearance.Material3.HeadlineSmall"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/creditCardsHeaderText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:cardBackgroundColor="#00FFFFFF"
            android:layout_margin="@dimen/margin_8dp"
            app:cardUseCompatPadding="false">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/creditCardsRecyclerView"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/margin_8dp"
                app:listData="@{viewModel.cardPropertiesLiveData}"
                tools:listitem="@layout/layout_recyclerview_credit_cards"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addingCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_cerulean_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:flow_verticalAlign="baseline"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/dark_cerulean_blue"
            app:srcCompat="@android:drawable/ic_input_add"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
