<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#415771"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/ImageViewBBNB"
            android:layout_width="95dp"
            android:layout_height="112dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/editTextTCKN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ImageViewBBNB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"
            android:textColor="@color/light_sky_blue"
            android:textStyle="bold"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextTCKN"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/edittext_register"
            android:hint="T.C. Kimlik No"
            android:textColor="@color/dusty_bluish_teal"
            android:maxLength="11"
            android:padding="10dp"
            android:textSize="18sp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Beni Hatırla"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.709"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54" />

        <TextView
            android:id="@+id/uyeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.60" />

        <TextView
            android:id="@+id/forgottenPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetMyPasswordText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.60" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/remember_button"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:shadowColor="@color/grayish_dusty_rose"
            app:thumbTint="@color/grayish_dusty_rose"
            app:trackTint="@color/dusty_bluish_teal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_register"
            android:hint="Şifre"
            android:maxLength="6"
            android:textColor="@color/dusty_bluish_teal"
            android:inputType="numberPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTCKN"
            app:layout_constraintVertical_bias="0.09" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GİRİŞ"
            android:textColor="@color/grayish_dusty_rose"
            android:backgroundTint="@color/dusty_bluish_teal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
